# trackmate-instructions

./: app_factory.py  config.py  pyproject.toml
.github/workflows/: azure-container-webapp.yml  main_trackmate-instrucation.yml
controllers/: instruction_controller.py
models/: input_model.py
services/: instruction_service.py
